--- a/Week7.ipynb
+++ b/Week7.ipynb
@@ -1162,10 +1162,9 @@
     {
       "cell_type": "code",
       "source": [
-        "explode = (0, 0.1, 0)  # only \"explode\" the 2nd slice (i.e. 'Hogs')\n",
-        "\n",
+        "# Count the number of penguins in each species\n",
         "fig, ax = plt.subplots()\n",
-        "ax.pie(sizes, explode=explode, labels=labels, autopct='%1.1f%%',\n",
+        "ax.pie(sizes, labels=labels, autopct='%1.1f%%',\n",
         "       shadow=True, startangle=90)\n",
         "plt.show()"
       ],
@@ -1193,6 +1192,36 @@
       "metadata": {
         "id": "Mz24MiKaKsIX"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "penguins['species'].value_counts()"
+      ],
+      "metadata": {
+        "id": "jDOG7_d1VmcF"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "species_counts = penguins['species'].value_counts()\n",
+        "explode = (0.1, 0, 0)\n",
+        "\n",
+        "fig, ax = plt.subplots()\n",
+        "ax.pie(species_counts, explode=explode, labels=species_counts.index, autopct='%1.1f%%',\n",
+        "       shadow=True, startangle=90)\n",
+        "plt.title('Distribution of Penguin Species')\n",
+        "plt.axis('equal')  # Equal aspect ratio ensures that pie is drawn as a circle.\n",
+        "plt.show()"
+      ],
+      "metadata": {
+        "id": "ApsxmMwVwxBD"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
