--- a/Week7.ipynb
+++ b/Week7.ipynb
@@ -1214,7 +1214,7 @@
         "ax.pie(species_counts, explode=explode, labels=species_counts.index, autopct='%1.1f%%',\n",
         "       shadow=True, startangle=90)\n",
         "plt.title('Distribution of Penguin Species')\n",
-        "plt.axis('equal')  # Equal aspect ratio ensures that pie is drawn as a circle.\n",
+        "plt.axis('equal')  # Ensures that pie is drawn as a circle\n",
         "plt.show()"
       ],
       "metadata": {
